[tool.poetry]
name = "vast-challenge"
version = "0.1.0"
description = "Onboarding exercises introducing Terraform and Localstack"
authors = ["Your Name <you@example.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
geopandas = "^0.10.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
